Actualizo URL del formulario

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- Opciones ocultas -->
         <input type="hidden" name="_subject" value="Nuevo mensaje desde tu portafolio">
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://jamirascencioflores.github.io/cv_landing/thanks.html">
+        <input type="hidden" name="_next" value="https://jamirascencioflores.github.io/portafolio/thanks.html">
     </form>
 
     <div class="contact-links">
