"Quinta versión del portafolio"

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>Aplicación SPA con catálogo, carrito de compras y secciones de eventos y contacto.</p>
             <p class="tecnologias">React 18, React Router DOM, Vite</p>
             <div class="buttons">
-                <a href="https://github.com/jamirascencioflores" target="_blank">GitHub</a>
+                <a href="https://github.com/jamirascencioflores/pasteleria-sistema.git" target="_blank">GitHub</a>
             </div>
         </div>
 
